// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`version bump prerelease increments version with custom --preid 1`] = `
"Publish

 - package-1@1.0.1-foo.0
 - package-2@2.0.1-foo.0
 - package-3@3.0.1-foo.0
 - package-4@4.0.1-foo.0
 - package-5@5.0.1-foo.0

HEAD -> master, tag: package-5@5.0.1-foo.0, tag: package-4@4.0.1-foo.0, tag: package-3@3.0.1-foo.0, tag: package-2@2.0.1-foo.0, tag: package-1@1.0.1-foo.0

diff --git a/packages/package-1/package.json b/packages/package-1/package.json
index SHA..SHA 100644
--- a/packages/package-1/package.json
+++ b/packages/package-1/package.json
@@ -3 +3 @@
-  \\"version\\": \\"1.0.0\\"
+  \\"version\\": \\"1.0.1-foo.0\\"
diff --git a/packages/package-2/package.json b/packages/package-2/package.json
index SHA..SHA 100644
--- a/packages/package-2/package.json
+++ b/packages/package-2/package.json
@@ -3 +3 @@
-  \\"version\\": \\"2.0.0\\",
+  \\"version\\": \\"2.0.1-foo.0\\",
@@ -5 +5 @@
-    \\"package-1\\": \\"^1.0.0\\"
+    \\"package-1\\": \\"^1.0.1-foo.0\\"
diff --git a/packages/package-3/package.json b/packages/package-3/package.json
index SHA..SHA 100644
--- a/packages/package-3/package.json
+++ b/packages/package-3/package.json
@@ -3 +3 @@
-  \\"version\\": \\"3.0.0\\",
+  \\"version\\": \\"3.0.1-foo.0\\",
@@ -5 +5 @@
-    \\"package-2\\": \\"^2.0.0\\"
+    \\"package-2\\": \\"^2.0.1-foo.0\\"
diff --git a/packages/package-4/package.json b/packages/package-4/package.json
index SHA..SHA 100644
--- a/packages/package-4/package.json
+++ b/packages/package-4/package.json
@@ -3 +3 @@
-  \\"version\\": \\"4.0.0\\",
+  \\"version\\": \\"4.0.1-foo.0\\",
diff --git a/packages/package-5/package.json b/packages/package-5/package.json
index SHA..SHA 100644
--- a/packages/package-5/package.json
+++ b/packages/package-5/package.json
@@ -4 +4 @@
-    \\"package-3\\": \\"^3.0.0\\"
+    \\"package-3\\": \\"^3.0.1-foo.0\\"
@@ -7 +7 @@
-  \\"version\\": \\"5.0.0\\"
+  \\"version\\": \\"5.0.1-foo.0\\""
`;

exports[`version bump prerelease increments version with default --preid 1`] = `
"Publish

 - package-1@1.0.1-alpha.0
 - package-2@2.0.1-alpha.0
 - package-3@3.0.1-alpha.0
 - package-4@4.0.1-alpha.0
 - package-5@5.0.1-alpha.0

HEAD -> master, tag: package-5@5.0.1-alpha.0, tag: package-4@4.0.1-alpha.0, tag: package-3@3.0.1-alpha.0, tag: package-2@2.0.1-alpha.0, tag: package-1@1.0.1-alpha.0

diff --git a/packages/package-1/package.json b/packages/package-1/package.json
index SHA..SHA 100644
--- a/packages/package-1/package.json
+++ b/packages/package-1/package.json
@@ -3 +3 @@
-  \\"version\\": \\"1.0.0\\"
+  \\"version\\": \\"1.0.1-alpha.0\\"
diff --git a/packages/package-2/package.json b/packages/package-2/package.json
index SHA..SHA 100644
--- a/packages/package-2/package.json
+++ b/packages/package-2/package.json
@@ -3 +3 @@
-  \\"version\\": \\"2.0.0\\",
+  \\"version\\": \\"2.0.1-alpha.0\\",
@@ -5 +5 @@
-    \\"package-1\\": \\"^1.0.0\\"
+    \\"package-1\\": \\"^1.0.1-alpha.0\\"
diff --git a/packages/package-3/package.json b/packages/package-3/package.json
index SHA..SHA 100644
--- a/packages/package-3/package.json
+++ b/packages/package-3/package.json
@@ -3 +3 @@
-  \\"version\\": \\"3.0.0\\",
+  \\"version\\": \\"3.0.1-alpha.0\\",
@@ -5 +5 @@
-    \\"package-2\\": \\"^2.0.0\\"
+    \\"package-2\\": \\"^2.0.1-alpha.0\\"
diff --git a/packages/package-4/package.json b/packages/package-4/package.json
index SHA..SHA 100644
--- a/packages/package-4/package.json
+++ b/packages/package-4/package.json
@@ -3 +3 @@
-  \\"version\\": \\"4.0.0\\",
+  \\"version\\": \\"4.0.1-alpha.0\\",
diff --git a/packages/package-5/package.json b/packages/package-5/package.json
index SHA..SHA 100644
--- a/packages/package-5/package.json
+++ b/packages/package-5/package.json
@@ -4 +4 @@
-    \\"package-3\\": \\"^3.0.0\\"
+    \\"package-3\\": \\"^3.0.1-alpha.0\\"
@@ -7 +7 @@
-  \\"version\\": \\"5.0.0\\"
+  \\"version\\": \\"5.0.1-alpha.0\\""
`;
